# financial-agent

backend/: .dockerignore  .env.example  Dockerfile  conftest.py  crews.py  langgraph.json  main.py  pyproject.toml  pytest.ini  registry.py  requirements.txt
backend/agents/: agent.py
backend/api/: routes.py
backend/config/: __init__.py  checkpointer.py  llm.py  logging.py  observability.py
backend/graphs/: financial.py  investment.py  medical.py  news.py  query.py  reddit.py
backend/state/: __init__.py  schemas.py
backend/tests/: test_phase1_foundation.py  test_phase2_tools_and_graphs.py  test_phase3_api_and_streaming.py  test_phase4_observability.py  test_phase5_async_and_observability.py
backend/tools/: __init__.py  finance.py  pubmed.py  reddit.py  serper.py
