[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "ai-workflows-api"
version = "2.0.0"
description = "LangGraph-powered AI workflow API"
requires-python = ">=3.11"

dependencies = [
    # ── Core orchestration ────────────────────────────────────────────────────
    "langgraph==1.1.3",
    "langgraph-checkpoint-sqlite==3.0.3",
    "aiosqlite>=0.20.0",
    "langchain==1.2.13",

    # ── LLM providers ─────────────────────────────────────────────────────────
    "langchain-google-genai==4.2.1",
    "langchain-groq==1.1.2",

    # ── API ───────────────────────────────────────────────────────────────────
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",

    # ── Config & validation ───────────────────────────────────────────────────
    "pydantic>=2.9.0",
    "pydantic-settings==2.13.1",

    # ── Logging ───────────────────────────────────────────────────────────────
    "structlog==25.5.0",

    # ── External data tools ───────────────────────────────────────────────────
    "yahooquery>=2.3.7",
    "praw>=7.8.1",
    "vaderSentiment>=3.3.2",
    "requests>=2.32.0",
    "tenacity>=9.0.0",

    # ── Utilities ─────────────────────────────────────────────────────────────
    "python-dotenv>=1.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",         # for FastAPI TestClient async
    "ruff>=0.6.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"